<resources>
    <string name="Badminton">Badminton</string>
    <string name="Beach">Beach volleyball</string>
    <string name="Floorball">Floorball</string>
    <string name="Hockey">Hockey</string>
    <string name="Squash">Squash</string>
    <string name="Tennis">Tennis</string>
    <string name="Volleyball">Volleyball</string>

    <string name="Bowling">Bowling</string>

    <string name="competition">Competition</string>
    <string name="competitions">Competitions</string>
    <string name="competition_settings">Competition settings</string>
    <string name="tournament">Tournament</string>
    <string name="tournaments">Tournaments</string>
    <string name="tournament_settings">Tournament settings</string>
    <string name="team">Team</string>
    <string name="teams">Teams</string>
    <string name="team_settings">Team settings</string>
    <string name="match">Match</string>
    <string name="matches">Matches</string>
    <string name="match_settings">Match settings</string>
    <string name="player">Player</string>
    <string name="players">Players</string>
    <string name="player_settings">Player settings</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="standings">Standings</string>
    <string name="overview">Overview</string>
    <string name="point_configuration">Point configuration</string>
    <string name="player_info">Player info</string>

    <string name="competitionType">Competition type</string>
    <string name="type_individuals">Individuals</string>
    <string name="type_teams">Teams</string>

    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="sort">Sort</string>
    <string name="help">Help</string>
    <string name="finish">Finish</string>
    <string name="edit_stats">Edit stats</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="generate_rosters">Generate rosters</string>
    <string name="generate_by_team_points">Generate by team points</string>
    <string name="generate_randomly">Generate randomly</string>
    <string name="sort_players">Sort players</string>
    <string name="sort_competitions">Sort competitions</string>
    <string name="sort_tournaments">Sort tournaments</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_email">Sort by email</string>
    <string name="sort_by_start_date">Sort by start date</string>
    <string name="sort_by_end_date">Sort by end date</string>

    <string name="competition_create_manually">Create competition manually</string>
    <string name="competition_import_file">Import from file</string>
    <string name="competition_import_server">Import from server</string>

    <string name="export_to_file">Export to file</string>
    <string name="export_file_created">File has been created in your Download folder.</string>
    <string name="export_file_failed">File could not be created. Please try again later.</string>
    <string name="choose_file">Choose file to import</string>

    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="match_sum">Matches played</string>
    <string name="tours_held">Tournaments held</string>
    <string name="date">Date</string>
    <string name="to">To:\u0020</string>
    <string name="from">From:\u0020</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="note">Note</string>
    <string name="round">Round</string>
    <string name="period">Period</string>
    <string name="type">Type</string>
    <string name="vs">vs.</string>
    <string name="set_nr">Set nr.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="add_match">Add match</string>
    <string name="add_single_match">Add single match</string>
    <string name="add_round">Add round</string>
    <string name="add_player">Add player</string>
    <string name="add_players">Add players</string>
    <string name="add_player_to">Add player to</string>
    <string name="add_players_home">Add players to home team</string>
    <string name="add_players_away">Add players to away team</string>

    <string name="competition_delete">Do you really want to delete the competition including all it\'s tournaments?</string>
    <string name="tournament_delete">Do you really want to delete the tournament including all it\'s teams and matches?</string>
    <string name="competition_created">Competition created.</string>
    <string name="tournament_created">Tournament created.</string>
    <string name="player_created">Player created.</string>
    <string name="competitionNotFound">Competition not found.</string>
    <string name="settings_saved">Settings have been saved.</string>
    <string name="settings_restored">Settings have been restored.</string>
    <string name="tournamentNotFound">Tournament not found.</string>

    <string name="name_empty_error">Name is empty!</string>
    <string name="name_email_empty_error">Name and/or email is empty!</string>
    <string name="not_all_fields_error">Not all fields are properly filled!</string>
    <string name="not_enough_teams_error">Not enough teams!</string>
    <string name="no_competition_file_error">No competition file in Download folder has been found.</string>

    <string name="invalidEmail">Email is not valid!</string>
    <string name="invalidName">Name is not valid!</string>
    <string name="invalidParticipants">Participants cannot be the same!</string>
    <string name="invalidRoundPeriod">Round or period is not set!</string>
    <string name="tournament_id_invalid">You have to specify either competitionId or tournamentId.</string>

    <string name="competition_not_empty_error">Competition could not be deleted! Try it again later.</string>
    <string name="tournament_not_empty_error">Tournament could not be deleted! Try it again later.</string>
    <string name="player_not_empty_error">Player could not be deleted! Player is registered in some competitions.</string>
    <string name="player_delete_from_competition_error">Player could not be deleted! Player is registered in some tournaments, teams or matches.</string>
    <string name="player_delete_from_tournament_error">Player could not be deleted! Player is registered in some teams or matches.</string>
    <string name="team_not_empty_error">Team could not be deleted! It participates in some matches.</string>

    <string name="failGenerateRosters">Rosters could not be generated! No team exists or some team already contains players.</string>
    <string name="failDeletePlayerFromTournament">Player is already in match or team and cannot be deleted.</string>
    <string name="failDeletePlayerFromCompetition">Player is already in tournament and cannot be deleted.</string>
    <string name="failDeleteTournament">Tournament already includes matches or players and cannot be deleted.</string>
    <string name="failDeleteTeam">Team is not empty and/or is already in some match and cannot be deleted.</string>
    <string name="cant_create_match">Cannot create match because tournament has too few participants.</string>
    <string name="sort_by_player_name">Sort by name</string>
    <string name="import_summary">Import summary</string>
    <string name="import_confirm">Confirm import</string>
    <string name="players_new">Players (new)</string>
    <string name="players_modified">Players (modified)</string>
    <string name="import_players">players</string>
    <string name="import_tournaments">tournaments</string>
    <string name="import_matches">matches</string>
    <string name="import_teams">teams</string>
    <string name="import_keep_local">Keep local</string>
    <string name="import_take_file">Take file</string>
    <string name="import_competition_empty">Competition is empty or contains players which already are in application.</string>
    <string name="period_round_empty_error">Period and round are required!</string>
    <string name="email_exists_error">This email already exists!</string>
    <string name="no_sport_found">No sport found</string>
    <string name="no_sport_description">No sports found in the application. Install some module to start using Tournament Manager.</string>
    <string name="about_text">\tTournament Manager is a mobile app for Android that allows you to collect statistics from amateur sports events (regular football play with colleagues, etc.) and generate balanced teams based on statistics.\n\tCurrently, the application supports sports like football / hockey and tennis / squash / badminton / bowling.
        \n\n\tOur development team:
        \nTomáš Prachenský - prachtom@fit.cvut.cz
        \nMartin Souček - soucem10@fit.cvut.cz
        \nPetr Hron - hronpet1@fit.cvut.cz
        \nAleksei Baklanov - baklaal1@fit.cvut.cz
        \nRichard Michálek - micharic@fit.cvut.cz
        \nJan Mikolášek - mikolja8@fit.cvut.cz
    \n\n\n\tInstalled applications and modules:</string>
</resources>
