<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_competition_empty"
            android:id="@+id/competition_empty"
            style="@style/Base.TextAppearance.AppCompat.Menu" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tournaments"
            android:id="@+id/tournaments_header"
            style="@style/Base.TextAppearance.AppCompat.Menu" />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/import_tournaments"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players_new"
            android:id="@+id/players_header"
            android:layout_marginTop="12dp"
            style="@style/Base.TextAppearance.AppCompat.Menu" />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/import_players"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/players_modified"
            android:id="@+id/conflicts_header"
            android:layout_marginTop="12dp"
            style="@style/Base.TextAppearance.AppCompat.Menu" />
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/import_conflicts"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="@string/import_confirm"
                android:id="@+id/confirm_import"
                android:layout_weight="0.5"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button"
                android:layout_marginTop="12dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>